z-index fix attempt #5

--- a/packages/design-system/src/Menu/styles.css
+++ b/packages/design-system/src/Menu/styles.css
@@ -1,3 +1,3 @@
-[data-radix-popper-content-wrapper] {
-  z-index: 1 !important;
-}
+/*[data-radix-popper-content-wrapper] {*/
+/*  z-index: 1 !important;*/
+/*}*/
